CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(PHIGS)

SET(CMAKE_MODULE_PATH ${PHIGS_SOURCE_DIR}/cmake)
FIND_PACKAGE(OpenGL)
FIND_PACKAGE(X11)
FIND_PACKAGE(XMU)

SET(CMAKE_C_FLAGS -Wall)
INCLUDE_DIRECTORIES(
    ${PHIGS_SOURCE_DIR}/../include/phigs
    ${PHIGS_SOURCE_DIR}/../include/Vk
    ${PHIGS_SOURCE_DIR}/../include/GL
    )
ADD_SUBDIRECTORY(libphigs)
ADD_SUBDIRECTORY(libVk)
ADD_SUBDIRECTORY(libGLw)
ADD_SUBDIRECTORY(tools)
ADD_SUBDIRECTORY(test_c)
ADD_SUBDIRECTORY(test_f)
ADD_SUBDIRECTORY(Revolver)

